--- a/src/assets/components/IntroCards/DeathsCard/styles/css/styles.css
+++ b/src/assets/components/IntroCards/DeathsCard/styles/css/styles.css
@@ -74,7 +74,7 @@
   border-radius: 7px;
   padding: 5px;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.05);
-  transition: all 0.3s ease;
+  transition: background .3s ease;
   animation-name: cards;
   animation-delay: 1.5s;
   animation-duration: 1s;
