Correção na animação

--- a/src/assets/components/IntroCards/RecoveredCard/styles/scss/styles.scss
+++ b/src/assets/components/IntroCards/RecoveredCard/styles/scss/styles.scss
@@ -9,7 +9,7 @@
   border-radius: 7px;
   padding: 5px;
   box-shadow: $dark-shadow;
-  transition: all .3s ease;
+  transition: background .3s ease;
   animation-name: cards;
   animation-delay: 1.3s;
   animation-duration: 1s;
